# SelfLocalization

./: README.md
self_localize/: CMakeLists.txt  package.xml
self_localize/launch/: navigation_stack.launch  test_world.launch
self_localize/localize-data/: pose-data
self_localize/maps/: map.pgm
self_localize/src/: pub_testing.cpp  self_localize.cpp
